syntax="proto3";
package arithmetic;

message Arithmetic{
	int32 firstNo = 1;
    int32 secondNo = 2;
}

message ArithmeticRequest {
	Arithmetic arithmetic = 1;
}

message ArithmeticResponse {
	int32 result = 1;
}

message AverageRequest {
	Arithmetic arithmetic = 1;
}

message AverageResponse {
	float result = 1;
}

message MaximumRequest {
  Arithmetic arithmetic = 1;
}

message MaximumResponse {
	string result = 1;
} 
message SquareRootRequest {
	int32 number = 1;
}

message SquareRootResponse {
	double number_root = 1;
}

option go_package = "arithmetic/arithmeticpb";
service ArithmeticService{
	rpc Add (ArithmeticRequest) returns (ArithmeticResponse) {};
	rpc Average(stream AverageRequest) returns (AverageResponse) {};
	rpc Maximum(stream MaximumRequest) returns (stream MaximumResponse) {};

	//to handle error 
	rpc SquareRoot (SquareRootRequest) returns (SquareRootResponse) {};
}